@@ -47,6 +47,10 @@ dpkg (1.18.0) UNRELEASED; urgency=low
   * Wrap file references in man page PO files.
   * Switch Dpkg::Checksums from using checksum programs to the more portable
     Digest modules. Obsolete the 'program' property, and add a 'name' one.
+  * Rework the Installed-Size field default value computation to make it
+    reproducible regardless of the build system filesystem, and document
+    how the value is computed and that it is just an approximation.
+    Closes: #650077
 
  -- Guillem Jover <guillem@debian.org>  Tue, 09 Dec 2014 23:53:18 +0100
 
